--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,9 +24,11 @@
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
+    "esbuild": "^0.25.2",
     "eslint": "^9.19.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
+    "framer-motion": "^12.6.2",
     "globals": "^15.14.0",
     "prettier": "^3.4.2",
     "typescript": "~5.7.2",
